tests/invalid/StaticVar_Invalid_12.whiley
int GLOBAL = 0

function f() -> (int r):
    return GLOBAL
